--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -119,7 +119,7 @@ html, body, #map-canvas, .container-fluid
     width:100%;
 }
 
-/* Panel to hold map */
+/* Panel to hold map */g
 .map-container {
     height: 100%;
     width: 100%;
@@ -209,4 +209,29 @@ div.map-container div.panel-heading {
 }
 .tt-suggestion p {
     margin: 0;
+}
+
+/* Modal CSS */
+.nav-tabs {
+    margin-bottom: 15px;
+}
+.sign-with {
+    margin-top: 25px;
+    padding: 20px;
+}
+div#OR {
+    height: 30px;
+    width: 30px;
+    border: 1px solid #C2C2C2;
+    border-radius: 50%;
+    font-weight: bold;
+    line-height: 28px;
+    text-align: center;
+    font-size: 12px;
+    float: right;
+    position: absolute;
+    right: -16px;
+    top: 40%;
+    z-index: 1;
+    background: #DFDFDF;
 }
