css adjustments to facilitate new non-map page views

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -254,3 +254,13 @@ div#OR {
     position: relative;
     top: 0;
 }
+
+#containz {
+    background:#FCFCFC;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    border-radius: 30px;
+    margin: 120px auto;
+    padding: 30px;
+    width:80%;
+}
