removed crap code and fixed search bar css

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -288,8 +288,11 @@ div#OR {
         margin-left: 12px;
         padding: 0 11px 0 13px;
         text-overflow: ellipsis;
-        width: 300px;
-        top: 50px !important;    
+        width: 300px;   
+      }
+
+      div#map #pac-input {
+        top: 50px !important;
       }
 
       #pac-input:focus {
